# spark-handson

./: .gitignore  README.md  exo0.md  exo1.md  exo2.md  exo3.md  exo4.md  exo5.md  pyproject.toml
infra/: local.tf  provider.tf
src/fr/hymaia/exo1/: main.py
src/fr/hymaia/exo2/: main.py
src/fr/hymaia/exo4/: scala_udf.py
src/resources/exo1/: data.csv
src/resources/exo2/: city_zipcode.csv  clients_bdd.csv
src/resources/exo4/sell.csv/: .part-00000-203cd7e2-61a4-4891-bfd5-e41cd285dd4d-c000.csv.crc  .part-00000-22ab30ff-4f70-4269-9bad-ff6893af4fdf-c000.csv.crc  .part-00000-340b0490-d5e0-4352-9f68-93878838313f-c000.csv.crc  .part-00001-203cd7e2-61a4-4891-bfd5-e41cd285dd4d-c000.csv.crc  .part-00001-22ab30ff-4f70-4269-9bad-ff6893af4fdf-c000.csv.crc  .part-00001-340b0490-d5e0-4352-9f68-93878838313f-c000.csv.crc  .part-00002-22ab30ff-4f70-4269-9bad-ff6893af4fdf-c000.csv.crc  .part-00003-22ab30ff-4f70-4269-9bad-ff6893af4fdf-c000.csv.crc  .part-00004-22ab30ff-4f70-4269-9bad-ff6893af4fdf-c000.csv.crc
tests/fr/hymaia/: spark_test_case.py  test_exo0.py
